# open-memory

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
hooks/: README.md  claude-code-settings.example.json  cursor-hooks.example.json  post_tool_use.py  session_start.sh  session_stop.py
k8s/: configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
skills/open-memory/: SKILL.md
skills/open-memory/references/: memory-hygiene.md  tool-reference.md
src/: config.py  schemas.py  server.py
src/database/: __init__.py  base.py  postgres.py
src/embeddings/: __init__.py  classifier.py  manager.py  models.py
src/memory/: cleanup.py  consolidation.py  dedup.py  service.py
src/tools/: memory_tools.py
tests/: test_classifier.py  test_consolidation.py  test_dedup.py  test_schemas.py  test_tools_validation.py
